[package]
name = "bondage-club-server-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
figment = { version = "0.10", features = ["env"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
tracing = "0.1"

axum = "0.7.0"
socketioxide = "0.17.0"
tower-http = { version = "0.5", features = ["cors"] }
axum-client-ip = "1.1.3"

futures-util = "0.3.31"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.19"
