[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.0"
socketioxide = "0.17.0"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
network = { path = "../network" }
common = { path = "../common" }
db = { path = "../db" }